--- a/landing_page/src/resources/css/mobile.css
+++ b/landing_page/src/resources/css/mobile.css
@@ -2,4 +2,10 @@
     .mobileGrid {
         display: grid;
     }
+    .card-body {
+        font-size: 4.5vw;
+    }
+    .card-title {
+        font-size: 5vw;
+    }
 }
